unpackaged/main/default/objects/Sales_Tax__c/Sales_Tax__c.object-meta.xml
<CustomObject>
    <label>Zip Code</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>