unpackaged/main/default/objects/Sales_Tax__c/fields/City_Rate__c.field-meta.xml
<CustomField>
    <fullName>City_Rate__c</fullName>
    <label>City Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>