unpackaged/main/default/objects/Sales_Tax__c/fields/Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Rate__c</fullName>
    <label>Sales Tax Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>