unpackaged/main/default/objects/Sales_Tax__c/fields/Sur_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sur_Tax__c</fullName>
    <label>Sur Tax</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>