unpackaged/main/default/objects/Sales_Tax__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory to be populated on Lead, Account, and referenced in Territory Management.</description>
    <label>Territory</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory</valueSetName>
    </valueSet>
</CustomField>