unpackaged/main/default/objects/Sales_Tax__c/listViews/Hurricane_price_book_Florida_2023.listView-meta.xml
<ListView>
    <fullName>Hurricane_price_book_Florida_2023</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Sales_Tax_Rate__c</columns>
    <columns>Sur_Tax__c</columns>
    <columns>State_Rate__c</columns>
    <columns>County_Rate__c</columns>
    <columns>City_Rate__c</columns>
    <columns>Special_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <filters>
        <field>Price_Book__c</field>
        <operation>equals</operation>
        <value>Hurricane price book Florida 2023</value>
    </filters>
    <label>Hurricane price book Florida 2023</label>
</ListView>