unpackaged/main/default/objects/Sales_Tax__c/listViews/NE_Pricebook_2.listView-meta.xml
<ListView>
    <fullName>NE_Pricebook_2</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Sales_Tax_Rate__c</columns>
    <columns>Sur_Tax__c</columns>
    <columns>State_Rate__c</columns>
    <columns>County_Rate__c</columns>
    <columns>City_Rate__c</columns>
    <columns>Special_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Book__c</field>
        <operation>equals</operation>
        <value>NE 2021 PB-2</value>
    </filters>
    <label>NE Pricebook 2</label>
</ListView>