unpackaged/main/default/objects/Sales_Tax__c/listViews/Texas.listView-meta.xml
<ListView>
    <fullName>Texas</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Sales_Tax_Rate__c</columns>
    <columns>Sur_Tax__c</columns>
    <columns>State_Rate__c</columns>
    <columns>County_Rate__c</columns>
    <columns>City_Rate__c</columns>
    <columns>Special_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>tx,texas</value>
    </filters>
    <label>Texas</label>
</ListView>