unpackaged/main/default/objects/Sales_Tax__c/listViews/X33.listView-meta.xml
<ListView>
    <fullName>X33</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>County__c</columns>
    <columns>Sales_Tax_Rate__c</columns>
    <columns>Sur_Tax__c</columns>
    <columns>State_Rate__c</columns>
    <columns>County_Rate__c</columns>
    <columns>City_Rate__c</columns>
    <columns>Special_Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Price_Book__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>33</value>
    </filters>
    <label>33*</label>
</ListView>