unpackaged/main/default/objects/Sales_Tax__c/listViews/Zips_Missing_Price_Books.listView-meta.xml
<ListView>
    <fullName>Zips_Missing_Price_Books</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>County__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Book__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>FLorida</value>
    </filters>
    <label>Zips Missing Price Books</label>
</ListView>